<resources>
    <string name="app_name">Crumbs - فتافيت</string>
    <string name="logoScreen">Logo Screen</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="slogan">\"Better meals leave no crumbs\"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="or_continue_with">OR</string>
    <string name="dont_have_account">Sign up?</string>
    <string name="google_login">Google</string>
    <string name="create_account">Create Your Account</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Create Account</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="setNewPassword">Reset Password</string>
    <string name="oldpassword">Current Password</string>
    <string name="newpsaaord">New Password</string>
    <string name="confirm_newpassword">Confirm New Password</string>
    <string name="changepassowrd">Change Password</string>
    <string name="sendEmail">Send Reset Email</string>
    <string name="default_web_client_id">355781444689-30rm1to6di24i2ek4sjov1igft08jtpl.apps.googleusercontent.com</string>
    <string name="app_logo">App Logo</string>
    <string name="userEmail">User Email</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="mealplanner">Meal Planner</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="searchmeals">Search Meals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="watch_on_youtube">Watch On Youtube</string>
    <string name="mealImage">Meal Image</string>
    <string name="search">Search</string>
    <string name="calender">Calender</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="ingredient_image">Ingredient Image</string>
    <string name="surpriseMeal">Surprise Meal</string>
    <string name="categories">Categories</string>
    <string name="popularIngredients">Popular Ingredients</string>
    <string name="ares">Countries</string>
    <string name="search_hint">Enter search term</string>
    <string name="all">All</string>
    <string name="searching">Searching</string>
    <string name="ingredients">Ingredients</string>
    <string name="areas">Areas</string>
    <string name="search_results">Search Results</string>
    <string name="no_results_found">No Results Found</string>
    <string name="goodbye">GoodBy...</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="cancel">Cancel</string>
    <string name="AssignRandomMeal">Assign Random Meal</string>
    <string name="addMeal">Add Meal</string>
    <string name="ClearMealPlan">Clear Meal Plan</string>
    <string name="asAguest">Continue as Guest</string>
    <string name="skip">Skip!!</string>
    <string name="NoInternetConnection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="goToFav">Go To Favorites</string>
</resources>