<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logoscreen"
    android:padding="24dp">

    <!-- Welcome text -->
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="246dp"
        android:layout_height="34dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/fireinlogo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleText"
        />

    <!-- Subtitle text -->
    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="215dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/slogan"
        android:textColor="@color/slogen"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- Email Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeColor="@color/slogen"
        app:hintTextColor="@color/slogen"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/slogen"
        tools:layout_editor_absoluteX="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingStart="45dp"
            android:textColor="@color/slogen"
            android:textColorHint="@color/slogen" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currentpasswordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeColor="@color/slogen"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/slogen"
        app:hintTextColor="@color/slogen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/slogen">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingStart="45dp"
            android:textColor="@color/slogen"
            android:textColorHint="@color/slogen" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Forgot Password -->
    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/forgotPassword"
        android:textColor="@color/fireinlogo"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <!-- Login Button -->

    <!-- Divider -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="287dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/slogen"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/login"
        android:textColor="@color/ic_launcher_background"
        android:textSize="18sp"
        app:cornerRadius="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentpasswordInputLayout" />

    <TextView
        android:id="@+id/dividerText"
        android:layout_width="54dp"
        android:layout_height="30dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppinsregular"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/or_continue_with"
        android:textColor="@color/fireinlogo"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />
    <!-- left divider line -->
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:background="@color/fireinlogo"
        app:layout_constraintBottom_toBottomOf="@id/dividerText"
        app:layout_constraintEnd_toStartOf="@id/dividerText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dividerText" />
    <!-- Right divider line -->
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:background="@color/fireinlogo"
        app:layout_constraintBottom_toBottomOf="@id/dividerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dividerText"
        app:layout_constraintTop_toTopOf="@id/dividerText" />

    <!-- Social Login Buttons -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleLoginButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="69dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/google_login"
        android:importantForAccessibility="yes"
        app:backgroundTint="@color/ic_launcher_background"
        app:cornerRadius="24dp"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="40dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerText"
        app:strokeColor="@color/ic_launcher_background"
        app:strokeWidth="1dp" />

    <!-- Sign Up Text -->
    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/dont_have_account"
        android:textColor="@color/fireinlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleLoginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>