<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAE0C0"
    tools:context=".splashFeature.view.activtiesView.SplashView">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationViewOffline"
        android:layout_width="235dp"
        android:layout_height="235dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/offline" />

    <TextView
        android:id="@+id/tv_network_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/NoInternetConnection"
        android:textColor="@color/slogen"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationViewOffline" />

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/slogen"
        android:padding="12dp"
        android:text="@string/retry"
        android:textColor="@color/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationViewOffline"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationViewOffline"
        app:layout_constraintTop_toBottomOf="@+id/btngofav"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btngofav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/slogen"
        android:padding="12dp"
        android:text="@string/goToFav"
        android:textColor="@color/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationViewOffline"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationViewOffline"
        app:layout_constraintTop_toBottomOf="@+id/tv_network_message" />

</androidx.constraintlayout.widget.ConstraintLayout>
